# Entix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cfg  main.cpp  makefile  test.cbp  test.cpp  test.layout
.github/workflows/: build.yml
ECS/: ECS.sln  ECS.vcxproj  ECS.vcxproj.filters
ECS/assets/prefabs/: mob.entt
ECS/assets/scenes/: box2d.scn  main.scn
assets/prefabs/: mob.entt
assets/scenes/: box2d.scn
core/: CMakeLists.txt  core.h
core/application/: application.cpp  application.h
core/ecs/: baseCamera.h  baseScript.h  components.cpp  components.h  defs.h  ecs.h
core/ecs/component/: array.h  camera.cpp  componentArray.h  componentManager.cpp  componentManager.h  manager.cpp  manager.h  sprites.cpp
core/ecs/component/tilemap/: drawer.cpp  tilemap.cpp
core/ecs/entity/: container.cpp  entity.cpp  entity.h
core/entry/: entry.cpp
core/event/: event.cpp  event.h  input.h  listner.cpp
core/renderer/: renderer.cpp  renderer.h
core/scene/: manager.cpp  scene.cpp  scene.h  sceneManager.cpp
core/serializer/: serializer.cpp  serializer.h
core/texture/: texture.cpp  texture.h
core/tmx/: tmx_utils.h
core/util/: vector.h
core/util/blur/: blur.cpp  blur.h
core/util/geometry/: vector.h  visibility.h
core/util/observable/: observable.h
ecs/: defs.h
ecs/entity/: entity.cpp  entity.h
prefabs/: controller.entt  mob.entt
scenes/: box2d.scn  main scene.yml  main.scn
src/: CMakeLists.txt  core.h
src/application/: application.cpp  application.h  hook.h
src/ecs/: baseCamera.h  baseScript.h  base_camera.h  base_script.h  components.h  defs.h  ecs.h
src/ecs/component/: array.h  camera.cpp  manager.cpp  manager.h  sprites.cpp
src/ecs/component/tilemap/: drawer.cpp  tilemap.cpp
src/ecs/entity/: container.cpp  entity.cpp  entity.h
src/ecs/filter/: filter.h
src/ecs/group/: group.cpp  group.h
src/ecs/system/: system.cpp  system.h
src/ecs/system/systems/: physic_system.h  systems.h
src/entry/: entry.cpp  entry.h
src/event/: event.cpp  event.h  input.cpp  input.h  listner.cpp
src/logger/: logger.cpp  logger.h
src/manager/: manager.cpp  manager.h
src/path/: path.cpp  path.h
src/renderer/: renderer.cpp  renderer.h
src/resource/: resource.cpp  resource.h
src/resource/resources/: physic_world.h  resources.h
src/scene/: manager.cpp  scene.cpp  scene.h  sceneManager.cpp
src/serializer/: serializer.cpp  serializer.h  specializations.cpp  specializations.h
src/task/: asynchronous.h  sequential.h  task.h  task_manager.h  task_pool.h
src/texture/: texture.cpp  texture.h
src/util/: util.h
src/util/blur/: blur.cpp  blur.h
src/util/geometry/: vector.h
src/util/lerp/: lerp.h
src/util/observable/: observable.h
src/util/threadSafeData/: threadSafeData.h
src/util/timer/: timer.h
tests/: CMakeLists.txt
tests/mobs/: CMakeLists.txt  scripts.h
tests/move_camera/: CMakeLists.txt
tests/move_camera/components/: move_camera.h
tests/test-application/: CMakeLists.txt  main.cpp  systems.h
tests/test-application/assets/: app.cfg
tests/test-application/assets/scenes/: main.scn
tests/tilemap/: CMakeLists.txt  main.cpp
tests/tilemap/assets/map/: terrain.json
tests/tilemap/assets/scenes/: main.scn
tests/two_views/: CMakeLists.txt
tests/two_views/components/: move_camera.h
